--- a/tools/loadtesting/terraform/elasticsearch_ansible/elasticsearch.yml
+++ b/tools/loadtesting/terraform/elasticsearch_ansible/elasticsearch.yml
@@ -3,3 +3,7 @@
   roles:
     - role: ec2
     - role: ansible
+    - role: docker
+    - role: elasticsearch
+    - role: elasticapm
+    - role: kibana
