--- a/tools/loadtesting/terraform/elasticsearch_ansible/roles/elasticapm/templates/apm-server.yml
+++ b/tools/loadtesting/terraform/elasticsearch_ansible/roles/elasticapm/templates/apm-server.yml
@@ -597,7 +597,7 @@ output.elasticsearch:
   # Scheme and port can be left out and will be set to the default (`http` and `9200`).
   # In case you specify and additional path, the scheme is required: `http://localhost:9200/path`.
   # IPv6 addresses should always be defined as: `https://[2001:db8::1]:9200`.
-  hosts: ["elasticsearch:9200"]
+  hosts: ["localhost:9200"]
 
   # Boolean flag to enable or disable the output module.
   #enabled: true
