--- a/tools/loadtesting/terraform/elasticsearch_ansible/roles/elasticapm/tasks/main.yml
+++ b/tools/loadtesting/terraform/elasticsearch_ansible/roles/elasticapm/tasks/main.yml
@@ -8,6 +8,7 @@
 - docker_container:
     name: elasticapm
     image: docker.elastic.co/apm/apm-server:7.15.2
+    restart_policy: always
     capabilities:
       - CHOWN
       - DAC_OVERRIDE
