--- a/tools/loadtesting/terraform/elasticsearch_ansible/roles/elasticapm/templates/apm-server.yml
+++ b/tools/loadtesting/terraform/elasticsearch_ansible/roles/elasticapm/templates/apm-server.yml
@@ -561,16 +561,17 @@ apm-server:
 #setup.template.fields: "${path.config}/fields.yml"
 
 # Overwrite existing template.
-#setup.template.overwrite: false
+setup.template.overwrite: true
 
 # Elasticsearch template settings.
-#setup.template.settings:
+setup.template.settings:
 
   # A dictionary of settings to place into the settings.index dictionary
   # of the Elasticsearch template. For more details, please check
   # https://www.elastic.co/guide/en/elasticsearch/reference/current/mapping.html
-  #index:
+  index:
     #number_of_shards: 1
+    number_of_replicas: 0
     #codec: best_compression
     #number_of_routing_shards: 30
     #mapping.total_fields.limit: 2000
