--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "file-saver": "1.3.8",
     "history": "2.1.0",
     "import-glob-loader": "1.1.0",
-    "isomorphic-fetch": "2.2.1",
+    "isomorphic-fetch": "^3.0.0",
     "js-md5": "0.7.3",
     "js-yaml": "3",
     "lodash": "^4.17.15",
@@ -184,7 +184,7 @@
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.2.1",
-    "css-loader": "0.28.11",
+    "css-loader": "^1.0.1",
     "cypress": "^9.2.0",
     "cypress-wait-until": "^1.7.1",
     "enzyme": "^3.11.0",
