--- a/.github/workflows/fleet-and-orbit.yml
+++ b/.github/workflows/fleet-and-orbit.yml
@@ -35,6 +35,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: gen
     steps:
+
+    - name: Install Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: ${{ matrix.go-version }}
+
+    - name: Checkout Code
+      uses: actions/checkout@v2
+
     - name: Start tunnel
       env: 
         CERT_PEM: ${{ secrets.CLOUDFLARE_TUNNEL_FLEETUEM_CERT_B64 }}
@@ -50,14 +59,6 @@ jobs:
           echo "Awaiting tunnel ready..."
           sleep 5
         done
-
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
-
-    - name: Checkout Code
-      uses: actions/checkout@v2
 
     - name: Start Infra Dependencies
       run: FLEET_MYSQL_IMAGE=${{ matrix.mysql }} docker-compose up -d mysql redis &
@@ -102,12 +103,7 @@ jobs:
 
     - name: Cleanup tunnel
       if: always()
-      run: |
-        echo "1 up:"
-        ls ../
-        echo "2 up:"
-        ls ../../
-        cloudflared tunnel --origincert ../../cert.pem delete --force ${{ needs.gen.outputs.subdomain }}
+      run: cloudflared tunnel --origincert ../../cert.pem delete --force ${{ needs.gen.outputs.subdomain }}
 
     - name: Upload logs
       if: always()
