--- a/.github/workflows/fleet-and-orbit.yml
+++ b/.github/workflows/fleet-and-orbit.yml
@@ -107,7 +107,7 @@ jobs:
       if: always()
       run: cloudflared tunnel --origincert cert.pem delete --force ${{ needs.gen.outputs.subdomain }}
 
-    - name: Upload logs
+    - name: Upload fleet logs
       if: always()
       uses: actions/upload-artifact@v2
       with:
@@ -122,7 +122,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: gen
     outputs:
-      token: ${{ steps.enroll.outputs.enroll_secret }}
+      enroll_secret: ${{ steps.enroll.outputs.enroll_secret }}
     steps:
 
     - name: Install Go
@@ -188,9 +188,17 @@ jobs:
           --fleet-url ${{ needs.gen.outputs.address }} \
           --enroll-secret ${{ needs.get-enroll-secret.outputs.enroll_secret }} \
           --osqueryd-channel ${{ matrix.osqueryd-channel }} \
-          -- --verbose &
+          -- --verbose 2>/tmp/orbit_stderr &
         while nc -z ${{ needs.gen.outputs.domain }} 443
         do
           echo "Retrying in 10s..."
           sleep 10
         done
+
+    - name: Upload orbit logs
+      if: always()
+      uses: actions/upload-artifact@v2
+      with:
+        name: orbit-logs
+        path: |
+          /tmp/orbit_stderr
