--- a/.github/workflows/fleet-and-orbit.yml
+++ b/.github/workflows/fleet-and-orbit.yml
@@ -95,6 +95,7 @@ jobs:
         # Wait for all of the hosts to be enrolled
         EXPECTED=2
         until [ $(./build/fleetctl get hosts --json | wc -l | tee hostcount) -ge $EXPECTED ]; do
+          ./build/fleetctl get hosts --json
           echo -n "Waiting for hosts to enroll: "
           cat hostcount | xargs echo -n
           echo " / $EXPECTED"
@@ -146,8 +147,8 @@ jobs:
         ./build/fleetctl config set --address ${{ needs.gen.outputs.address }}
         until ./build/fleetctl login --email admin@example.com --password admin123#
         do
-          echo "Retrying in 5s..."
-          sleep 5
+          echo "Retrying in 10s..."
+          sleep 10
         done
         SECRET_JSON=$(./build/fleetctl get enroll_secret --json --debug)
         echo $SECRET_JSON
