--- a/.github/workflows/fleet-and-orbit.yml
+++ b/.github/workflows/fleet-and-orbit.yml
@@ -71,9 +71,6 @@ jobs:
     - name: Install JS Dependencies
       run: make deps-js
 
-    - name: Install Go Dependencies
-      run: make deps-go
-
     - name: Generate and bundle go & js code
       run: make generate
 
@@ -98,7 +95,7 @@ jobs:
           sleep 5
         done
         # Wait for all of the hosts to be enrolled
-        EXPECTED=1
+        EXPECTED=2
         until [ $(./build/fleetctl get hosts --json | grep "hostname" | wc -l | tee hostcount) -ge $EXPECTED ]; do
           ./build/fleetctl get hosts --json
           echo -n "Waiting for hosts to enroll: "
@@ -139,9 +136,6 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
-    - name: Install Go Dependencies
-      run: make deps-go
-
     - name: Build Fleetctl
       run: make fleetctl
 
@@ -178,9 +172,6 @@ jobs:
 
     - name: Checkout Code
       uses: actions/checkout@v2
-
-    - name: Install Go Dependencies
-      run: make deps-go
 
     - name: Build and Run Orbit
       run: |
@@ -232,22 +223,20 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
-    - name: Install Go Dependencies
-      run: make deps-go
-
     - name: Build and Run Orbit
+      shell: bash
       run: |
-        mkdir "C:\Program Files\Orbit"
-        cp .\orbit\pkg\packaging\certs.pem "C:\Program Files\Orbit"
+        mkdir /C/Program Files/Orbit"
+        cp ./orbit/pkg/packaging/certs.pem "/C/Program Files/Orbit"
         mkdir orbit_logs
         go run github.com/fleetdm/fleet/v4/orbit/cmd/orbit \
           --dev-mode \
           --disable-updates \
-          --root-dir "C:\Program Files\Orbit" \
+          --root-dir "/C/Program Files/Orbit" \
           --fleet-url ${{ needs.gen.outputs.address }} \
           --enroll-secret ${{ needs.get-enroll-secret.outputs.enroll_secret }} \
           --osqueryd-channel ${{ matrix.osqueryd-channel }} \
-          -- --verbose 1>.\orbit_logs\stdout.log 2>.\orbit_logs\stderr.log &
+          -- --verbose 1>./orbit_logs/stdout.log 2>./orbit_logs/stderr.log &
         # TODO(lucas): Improve checking of "enrolled".
         # This waits until the server goes down.
         while curl --fail ${{ needs.gen.outputs.address }};
@@ -263,3 +252,4 @@ jobs:
         name: orbit-windows-logs-${{ matrix.osqueryd-channel }}
         path: |
           orbit_logs
+
