--- a/package.json
+++ b/package.json
@@ -149,10 +149,10 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-links": "^6.4.19",
-    "@storybook/react": "^6.4.19",
+    "@storybook/addon-actions": "^6.5.0-alpha.44",
+    "@storybook/addon-essentials": "^6.5.0-alpha.44",
+    "@storybook/addon-links": "^6.5.0-alpha.44",
+    "@storybook/react": "^6.5.0-alpha.44",
     "@testing-library/cypress": "^7.0.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
