Add legacy targets (until our TUF system exposes the new app)

--- a/.github/workflows/fleet-and-orbit.yml
+++ b/.github/workflows/fleet-and-orbit.yml
@@ -183,6 +183,7 @@ jobs:
         go run github.com/fleetdm/fleet/v4/orbit/cmd/orbit \
           --debug \
           --dev-mode \
+          --dev-darwin-legacy-targets \
           --disable-updates \
           --root-dir /tmp/orbit \
           --fleet-url ${{ needs.gen.outputs.address }} \
