--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
     "sqlite-parser": "1.0.1",
     "use-debounce": "^7.0.0",
     "uuid": "^8.3.2",
-    "whatwg-fetch": "0.11.1",
     "when": "3.7.8"
   },
   "babel": {
@@ -149,10 +148,10 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-links": "^6.4.19",
-    "@storybook/react": "^6.4.19",
+    "@storybook/addon-actions": "^6.5.0-alpha.44",
+    "@storybook/addon-essentials": "^6.5.0-alpha.44",
+    "@storybook/addon-links": "^6.5.0-alpha.44",
+    "@storybook/react": "^6.5.0-alpha.44",
     "@testing-library/cypress": "^7.0.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -228,8 +227,6 @@
     "url-loader": "^2.1.0",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-middleware": "^3.7.0",
-    "webpack-hot-middleware": "2.22.2",
     "webpack-notifier": "1.12.0"
   },
   "browserslist": [
