--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,8 +25,8 @@ linters-settings:
       - github.com/pkg/errors: "use ctxerr if a context.Context is available or stdlib errors.New / fmt.Errorf with the %w verb"
   
   gosec:
-    excludes:
-       - G110
+    config:
+      G306: "0644"
 
   gocritic:
     enabled-checks:
@@ -61,12 +61,144 @@ linters-settings:
       - name: unreachable-code
       - name: redefines-builtin-id
 
+# Before excluding files from gosec linter - an issue must be created and referenced in a comment.
 issues:
   exclude-rules:
     - path: server/datastore/mysql/migrations/[^/]+/[^/]+\.go
       linters:
         - depguard
+    # cmd gosec exclusions
+    - path: cmd/osquery-perf/agent.go
+      linters:
+        - gosec
+    - path: cmd/fleet/serve.go
+      linters:
+        - gosec
+    - path: cmd/fleetctl/api.go
+      linters:
+        - gosec
+    - path: cmd/fleetctl/get.go
+      linters:
+        - gosec
+    - path: cmd/fleetctl/preview.go
+      linters:
+        - gosec  
+    # Orbit gosec exclusions
+    - path: orbit/pkg/update/update.go
+      linters:
+        - gosec
+    - path: orbit/pkg/packaging/wix/wix.go
+      linters:
+        - gosec
+    - path: orbit/pkg/packaging/macos.go
+      linters:
+        - gosec
+    - path: orbit/pkg/packaging/windows.go
+      linters:
+        - gosec
+    - path: orbit/pkg/packaging/packaging.go
+      linters:
+        - gosec
+    - path: orbit/pkg/insecure/
+      linters:
+        - gosec
+    # pkg gosec exclusions
     # Test file which triggers many TLS warnings by design
     - path: pkg/fleethttp/fleethttp_test.go
+      linters:
+        - gosec
+    - path: pkg/certificate/certificate.go
+      linters:
+        - gosec 
+    - path: pkg/download/download.go
+      linters:
+        - gosec  
+    # server gosec exclusions
+    - path: server/mail/mail.go
+      linters:
+        - gosec
+    - path: server/datastore/mysql/migrations/tables/20201011162341_CleanupSoftDeletedColumns.go
+      linters:
+        - gosec
+    - path: server/service/redis_policy_set/redis_policy_set_test.go
+      linters:
+        - gosec
+    - path: server/sso/settings.go
+      linters:
+        - gosec
+    - path: server/datastore/mysql/hosts.go
+      linters:
+        - gosec
+    - path: server/datastore/mysql/hosts_test.go
+      linters:
+        - gosec
+    - path: server/datastore/mysql/mysql_test.go
+      linters:
+        - gosec
+    - path: server/service/client_live_query.go
+      linters:
+        - gosec
+    - path: server/service/invites.go
+      linters:
+        - gosec
+    - path: server/service/service_appconfig.go
+      linters:
+        - gosec
+    - path: server/service/service_users.go
+      linters:
+        - gosec
+    - path: server/datastore/mysql/migrations/tables/20201011162341_CleanupSoftDeletedColumns.go
+      linters:
+        - gosec
+    - path: server/datastore/mysql/aggregated_stats_test.go
+      linters:
+        - gosec
+    - path: server/fleet/app.go
+      linters:
+        - gosec
+    - path: server/service/async/async_policy.go
+      linters:
+        - gosec
+    - path: server/logging/kinesis.go
+      linters:
+        - gosec
+    - path: server/logging/kinesis_test.go
+      linters:
+        - gosec    
+    - path: server/config/config.go
+      linters:
+        - gosec  
+    - path: server/datastore/redis/ratelimit_store.go
+      linters:
+        - gosec
+    - path: server/datastore/mysql/testing_utils.go
+      linters:
+        - gosec
+    - path: server/datastore/mysql/packs_test.go
+      linters:
+        - gosec
+    - path: server/service/appconfig.go
+      linters:
+        - gosec
+    - path: server/service/client.go
+      linters:
+        - gosec  
+    - path: server/service/users.go
+      linters:
+        - gosec    
+    - path: server/service/appconfig_test.go
+      linters:
+        - gosec        
+    - path: server/service/service_campaign_test.go
+      linters:
+        - gosec  
+    - path: server/datastore/mysql/software_test.go
+      linters:
+        - gosec  
+    - path: server/datastore/mysql/migrations/tables/20201011162341_CleanupSoftDeletedColumns.go
+      linters:
+        - gosec  
+    # tools gosec exclusions
+    - path: tools/dbutils/schema_generator.go
       linters:
         - gosec
