--- a/.github/workflows/generate-osqueryd-app-tar-gz.yml
+++ b/.github/workflows/generate-osqueryd-app-tar-gz.yml
@@ -5,8 +5,11 @@ on:
     branches:
       - main
     paths:
-      # The workflow can be triggered by modifying OSQUERY_VERSION env
-      # below and pushing/merging to main.
+      # The workflow can be triggered by modifying OSQUERY_VERSION env.
+      - '.github/workflows/generate-osqueryd-app-tar-gz.yml'
+  pull_request:
+    paths:
+      # The workflow can be triggered by modifying OSQUERY_VERSION env.
       - '.github/workflows/generate-osqueryd-app-tar-gz.yml'
   workflow_dispatch:
 
