--- a/.github/workflows/generate-osqueryd-app-tar-gz.yml
+++ b/.github/workflows/generate-osqueryd-app-tar-gz.yml
@@ -13,14 +13,11 @@ on:
       - '.github/workflows/generate-osqueryd-app-tar-gz.yml'
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 env:
   OSQUERY_VERSION: 5.2.2
 
 jobs:
-  release:
+  generate:
     runs-on: macos-latest
     steps:
       - name: Checkout
@@ -28,10 +25,11 @@ jobs:
 
       - name: Generate osqueryd.app.tar.gz
         run: |
-          make osqueryd-app-tar-gz out-path=. version=$OSQUERY_VERSION
+          mkdir osqueryd-app-tar-gz
+          make osqueryd-app-tar-gz out-path=./osqueryd-app-tar-gz version=$OSQUERY_VERSION
 
       - name: Upload osqueryd.app.tar.gz
         uses: actions/upload-artifact@v2
         with:
           name: osqueryd.app.tar.gz
-          path: osqueryd.app.tar.gz 
+          path: ./osqueryd-app-tar-gz
