--- a/.github/workflows/generate-desktop-app-tar-gz.yml
+++ b/.github/workflows/generate-desktop-app-tar-gz.yml
@@ -20,6 +20,11 @@ jobs:
   release:
     runs-on: macos-latest
     steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '^1.17.0'
+
       - name: Checkout
         uses: actions/checkout@v2
 
