--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.1",
-    "@types/sockjs-client": "^1.5.1",
-    "@types/uuid": "^8.3.3",
+    "@reduxjs/toolkit": "1.5.1",
+    "@types/sockjs-client": "1.5.1",
+    "@types/uuid": "8.3.3",
     "ace-builds": "1.4.12",
-    "autoprefixer": "^9.4.3",
-    "axios": "^0.21.1",
-    "bourbon": "^5.0.0",
+    "autoprefixer": "9.4.3",
+    "axios": "0.21.1",
+    "bourbon": "5.0.0",
     "classnames": "2.2.5",
     "core-js": "3",
-    "date-fns": "^2.25.0",
+    "date-fns": "2.25.0",
     "es6-object-assign": "1.1.0",
     "es6-promise": "4.2.4",
     "expect": "1.20.2",
@@ -34,43 +34,43 @@
     "file-saver": "1.3.8",
     "history": "2.1.0",
     "import-glob-loader": "1.1.0",
-    "isomorphic-fetch": "^3.0.0",
+    "isomorphic-fetch": "3.0.0",
     "js-md5": "0.7.3",
     "js-yaml": "3",
-    "lodash": "^4.17.15",
-    "memoize-one": "^5",
-    "nock": "^13.0.5",
+    "lodash": "4.17.21",
+    "memoize-one": "5",
+    "nock": "13.0.5",
     "node-bourbon": "4.2.8",
-    "node-sass": "^7.0.0",
+    "node-sass": "7.0.0",
     "normalizr": "2.3.1",
-    "postcss-loader": "^3.0.0",
-    "prop-types": "^15.7.4",
+    "postcss-loader": "3.0.0",
+    "prop-types": "15.7.4",
     "proxy-middleware": "0.15.0",
     "rc-pagination": "1.16.3",
-    "react": "^16.8.6",
-    "react-accessible-accordion": "^3.3.4",
+    "react": "16.8.6",
+    "react-accessible-accordion": "3.3.4",
     "react-ace": "9.3.0",
-    "react-dom": "^16",
+    "react-dom": "16",
     "react-entity-getter": "0.0.8",
-    "react-error-boundary": "^3.1.4",
-    "react-query": "^3.19.2",
+    "react-error-boundary": "3.1.4",
+    "react-query": "3.19.2",
     "react-redux": "7.2.2",
-    "react-router": "^3.0.0",
+    "react-router": "3.0.0",
     "react-router-redux": "4.0.8",
     "react-router-transition": "0.1.1",
-    "react-select": "^1",
+    "react-select": "1",
     "react-table": "7.7.0",
-    "react-tabs": "^3.2.0",
-    "react-tooltip": "^4.2.15",
+    "react-tabs": "3.2.0",
+    "react-tooltip": "4.2.15",
     "redux": "4.0.5",
     "redux-mock-store": "1.4.0",
     "redux-thunk": "2.3.0",
     "require-hacker": "2.1.4",
     "select": "1.1.2",
-    "sockjs-client": "^1.4.0",
+    "sockjs-client": "1.4.0",
     "sqlite-parser": "1.0.1",
-    "use-debounce": "^7.0.0",
-    "uuid": "^8.3.2",
+    "use-debounce": "7.0.0",
+    "uuid": "8.3.2",
     "when": "3.7.8"
   },
   "babel": {
@@ -127,106 +127,106 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.12.8",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-do-expressions": "^7.0.0",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-bind": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.0.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
-    "@babel/preset-typescript": "^7.12.7",
-    "@storybook/addon-actions": "^6.5.0-alpha.44",
-    "@storybook/addon-essentials": "^6.5.0-alpha.44",
-    "@storybook/addon-links": "^6.5.0-alpha.44",
-    "@storybook/react": "^6.5.0-alpha.44",
-    "@testing-library/cypress": "^7.0.4",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^13.1.9",
-    "@tsconfig/recommended": "^1.0.1",
+    "@babel/cli": "7.12.8",
+    "@babel/core": "7.12.8",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-decorators": "7.0.0",
+    "@babel/plugin-proposal-do-expressions": "7.0.0",
+    "@babel/plugin-proposal-export-default-from": "7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "7.0.0",
+    "@babel/plugin-proposal-function-bind": "7.0.0",
+    "@babel/plugin-proposal-function-sent": "7.0.0",
+    "@babel/plugin-proposal-json-strings": "7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/plugin-syntax-import-meta": "7.0.0",
+    "@babel/preset-env": "7.12.7",
+    "@babel/preset-react": "7.12.7",
+    "@babel/preset-typescript": "7.12.7",
+    "@storybook/addon-actions": "6.5.0-alpha.48",
+    "@storybook/addon-essentials": "6.5.0-alpha.48",
+    "@storybook/addon-links": "6.5.0-alpha.48",
+    "@storybook/react": "6.5.0-alpha.48",
+    "@testing-library/cypress": "7.0.4",
+    "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/react": "11.2.5",
+    "@testing-library/user-event": "13.1.9",
+    "@tsconfig/recommended": "1.0.1",
     "@types/classnames": "0.0.32",
-    "@types/cypress": "^1.1.3",
-    "@types/enzyme": "^3.10.8",
+    "@types/cypress": "1.1.3",
+    "@types/enzyme": "3.10.8",
     "@types/expect": "1.20.3",
-    "@types/file-saver": "^2.0.3",
-    "@types/js-md5": "^0.4.2",
-    "@types/js-yaml": "^4.0.1",
-    "@types/lodash": "^4.14.168",
-    "@types/memoize-one": "^5.1.2",
+    "@types/file-saver": "2.0.3",
+    "@types/js-md5": "0.4.2",
+    "@types/js-yaml": "4.0.1",
+    "@types/lodash": "4.14.168",
+    "@types/memoize-one": "5.1.2",
     "@types/mocha": "2.2.48",
-    "@types/node": "^14.14.37",
-    "@types/prop-types": "^15.7.3",
-    "@types/react": "^17.0.2",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router": "^3.0.0",
-    "@types/react-router-redux": "^5.0.18",
+    "@types/node": "14.14.37",
+    "@types/prop-types": "15.7.3",
+    "@types/react": "17.0.2",
+    "@types/react-redux": "7.1.16",
+    "@types/react-router": "3.0.0",
+    "@types/react-router-redux": "5.0.18",
     "@types/react-select": "1.3.0",
     "@types/react-table": "7.7.7",
-    "@types/react-tabs": "^2.3.2",
-    "@types/react-tooltip": "^4.2.4",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^9.0.0",
-    "babel-jest": "^23.4.2",
-    "babel-loader": "^8.2.1",
-    "css-loader": "^1.0.1",
-    "cypress": "^9.2.0",
-    "cypress-wait-until": "^1.7.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb": "^15",
-    "eslint-config-prettier": "^8.1.0",
+    "@types/react-tabs": "2.3.2",
+    "@types/react-tooltip": "4.2.4",
+    "@typescript-eslint/eslint-plugin": "4.15.2",
+    "@typescript-eslint/parser": "4.15.2",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "9.0.0",
+    "babel-jest": "23.4.2",
+    "babel-loader": "8.2.1",
+    "css-loader": "1.0.1",
+    "cypress": "9.2.0",
+    "cypress-wait-until": "1.7.1",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.6",
+    "eslint": "7.20.0",
+    "eslint-config-airbnb": "15",
+    "eslint-config-prettier": "8.1.0",
     "eslint-import-resolver-webpack": "0.10.0",
-    "eslint-plugin-cypress": "^2.11.2",
-    "eslint-plugin-import": "^2",
+    "eslint-plugin-cypress": "2.11.2",
+    "eslint-plugin-import": "2",
     "eslint-plugin-jest": "20.0.3",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7",
+    "eslint-plugin-react-hooks": "4.2.0",
     "expose-loader": "0.7.5",
-    "file-loader": "^4.1.0",
-    "hard-source-webpack-plugin": "^0.13.1",
-    "html-webpack-plugin": "^3.2.0",
-    "identity-obj-proxy": "^3.0.0",
+    "file-loader": "4.1.0",
+    "hard-source-webpack-plugin": "0.13.1",
+    "html-webpack-plugin": "3.2.0",
+    "identity-obj-proxy": "3.0.0",
     "ignore-styles": "5.0.1",
-    "jest": "^26.6.3",
-    "jest-environment-jsdom-sixteen": "^1.0.3",
-    "jsdom": "^16.5.2",
+    "jest": "26.6.3",
+    "jest-environment-jsdom-sixteen": "1.0.3",
+    "jsdom": "16.5.2",
     "json-loader": "0.5.7",
-    "mini-css-extract-plugin": "^0.7.0",
+    "mini-css-extract-plugin": "0.7.0",
     "prettier": "2.2.1",
     "raw-loader": "0.5.1",
-    "regenerator-runtime": "^0.13.7",
+    "regenerator-runtime": "0.13.7",
     "sass-loader": "6.0.7",
     "source-map-loader": "0.2.3",
-    "stacktrace-parser": "^0.1.10",
+    "stacktrace-parser": "0.1.10",
     "style-loader": "0.21.0",
-    "trace-unhandled": "^2.0.1",
-    "ts-loader": "^6.0.4",
+    "trace-unhandled": "2.0.1",
+    "ts-loader": "6.0.4",
     "ts-node": "1.7.3",
     "tslint": "5.10.0",
-    "tslint-eslint-rules": "^5.4.0",
+    "tslint-eslint-rules": "5.4.0",
     "tslint-react": "3.6.0",
-    "typescript": "^4.2.2",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.37.0",
-    "webpack-cli": "^3.3.6",
+    "typescript": "4.2.2",
+    "url-loader": "2.1.0",
+    "webpack": "4.37.0",
+    "webpack-cli": "3.3.6",
     "webpack-notifier": "1.12.0"
   },
   "browserslist": [
