--- a/.github/workflows/build-binaries.yaml
+++ b/.github/workflows/build-binaries.yaml
@@ -7,21 +7,24 @@ on:
   pull_request:
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   build-binaries:
     runs-on: ubuntu-latest
     steps:
     - name: Install Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@bfdd3570ce990073878bf10f6b2d79082de49492 # v2
       with:
         go-version: 1.17
 
     - name: Checkout Code
-      uses: actions/checkout@v2
+      uses: actions/checkout@629c2de402a417ea7690ca6ce3f33229e27606a5 # v2
 
     - name: JS Dependency Cache
       id: js-cache
-      uses: actions/cache@v2
+      uses: actions/cache@661fd3eb7f2f20d8c7c84bc2b0509efd7a826628 # v2
       with:
         path: |
           **/node_modules
@@ -33,7 +36,7 @@ jobs:
 
     - name: Go Cache
       id: go-cache
-      uses: actions/cache@v2
+      uses: actions/cache@661fd3eb7f2f20d8c7c84bc2b0509efd7a826628 # v2
       with:
         # In order:
         # * Module download cache
@@ -65,7 +68,7 @@ jobs:
     - name: Build binaries
       run: make
 
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@82c141cc518b40d92cc801eee768e7aafc9c2fa2 # v2
       with:
         name: build
         path: build/
