--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -209,14 +209,14 @@ jobs:
         mv fleet-osquery.msi orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}.msi
 
     - name: Upload MSI
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@82c141cc518b40d92cc801eee768e7aafc9c2fa2 # v2
       with:
         name: orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}.msi
         path: orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}.msi
 
     - name: Debug on failure
       if: failure()
-      uses: mxschmitt/action-tmate@v3
+      uses: mxschmitt/action-tmate@8b4e4ac71822ed7e0ad5fb3d1c33483e9e8fb270 # v3
 
   orbit-windows:
     timeout-minutes: 15
@@ -235,7 +235,7 @@ jobs:
 
     - name: Download MSI
       id: download
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@f023be2c48cc18debc3bacd34cb396e0295e2869 # v2
       with:
         name: orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}.msi
     
