fix uncommented line for code owners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 # Go engineers are automatically added as reviewers when changes are made to go
-files or related backend files.
+# files or related backend files.
 *.go @fleetdm/go
 go.sum @fleetdm/go
 go.mod @fleetdm/go
