Adding permissions to docs.yml and integration.yml

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,6 +11,8 @@ on:
 
 jobs:
   markdown-link-check:
+    permissions: 
+      contents: read # to read files to check dead links 
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@61b9e3751b92087fd0b06925ba6dd6314e06f089 # master
