--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -14,6 +14,8 @@ on:
 
 jobs:
   gen:
+    permissions:
+      contents: none
     runs-on: ubuntu-latest
     outputs:
       subdomain: ${{ steps.gen.outputs.subdomain }}
@@ -26,6 +28,9 @@ jobs:
         echo "::set-output name=address::https://fleet-test-$UUID.fleetuem.com"
   
   run-server:
+    permissions:
+      actions: read  # for dawidd6/action-download-artifact to query and download artifacts
+      pull-requests: read  # for dawidd6/action-download-artifact to query commit hash
     runs-on: ubuntu-latest
     needs: gen
     steps:
@@ -82,6 +87,9 @@ jobs:
       run: cloudflared tunnel --origincert cert.pem delete --force ${{ needs.gen.outputs.subdomain }}    
 
   login:
+   permissions:
+     actions: read  # for dawidd6/action-download-artifact to query and download artifacts
+     pull-requests: read  # for dawidd6/action-download-artifact to query commit hash
    runs-on: ubuntu-latest
    needs: gen
    outputs:
@@ -113,6 +121,8 @@ jobs:
         echo "::set-output name=token::$TOKEN"
       
   orbit-macos:
+    permissions:
+      contents: none
     timeout-minutes: 15
     strategy:
       matrix:
@@ -143,6 +153,9 @@ jobs:
         done
 
   orbit-ubuntu:
+    permissions:
+      actions: read  # for dawidd6/action-download-artifact to query and download artifacts
+      pull-requests: read  # for dawidd6/action-download-artifact to query commit hash
     timeout-minutes: 15
     strategy:
       matrix:
@@ -219,6 +232,8 @@ jobs:
       uses: mxschmitt/action-tmate@8b4e4ac71822ed7e0ad5fb3d1c33483e9e8fb270 # v3
 
   orbit-windows:
+    permissions:
+      contents: none
     timeout-minutes: 15
     strategy:
       matrix:
