--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -21,6 +21,7 @@ on:
       - '**.tsx'
   schedule:
     - cron: '18 17 * * 1'
+  workflow_dispatch: # Manual
       
 permissions:
     actions: read
